cheat-sheet: fixes copy code to clipboard issue
Button shows "Code copied to Clipboard" but no code can be pasted in Cheat
Sheet.

This patch fixes the reported issue in soletta-dev-app/issues/62.

 - Removed ExamplesView.js and references
 - Corrected indentation and spaces in code
 - Added detection error when copying file

Signed-off-by: Kamidi Preetham <kamidi@live.com>

--- a/doc/node-types-html/index.html.in
+++ b/doc/node-types-html/index.html.in
@@ -15,7 +15,217 @@
     <script type="text/javascript" src="js/page/Category.js"></script>
     <script type="text/javascript" src="js/page/Entry.js"></script>
     <script type="text/javascript" src="js/page/MenuItem.js"></script>
-    <script type="text/javascript" src="js/page/ExamplesView.js"></script>
+    <script type="text/javascript">
+	// /*
+	//  * This file is part of the Soletta Project
+	//  *
+	//  * Copyright (C) 2015 Intel Corporation. All rights reserved.
+	//  *
+	//  * Licensed under the Apache License, Version 2.0 (the "License");
+	//  * you may not use this file except in compliance with the License.
+	//  * You may obtain a copy of the License at
+	//  *
+	//  *     http://www.apache.org/licenses/LICENSE-2.0
+	//  *
+	//  * Unless required by applicable law or agreed to in writing, software
+	//  * distributed under the License is distributed on an "AS IS" BASIS,
+	//  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+	//  * See the License for the specific language governing permissions and
+	//  * limitations under the License.
+	//  */
+	(function(window){
+	    function ExamplesView(){
+	        /* getting the DOM element */
+	        var el = $('#example');
+
+	        /* setting up the back button */
+	        $('.button-back').on('click',onBackClick);
+	        function onBackClick(event){
+	            close();
+	        }
+
+	        /* handling the window resize */
+	        function onWindowResize(event){
+	            adjustExampleView();
+	        }
+
+	        /* adjusting the view when the window is resized */
+	        function adjustExampleView(){
+	            var exampleWidth = $('#example').width() - 291-25;
+	            var exampleHeight = $('#example').height()-91-32;
+
+	            $('#example-image-container').css('width',exampleWidth);
+	            $('#example-image-container').css('height',exampleHeight);
+	        }
+
+	        /* load the contents of the selected entry */
+	        function loadExampleContents(_data){
+	            /* loading title and description */
+	            var info = $('#example-info');
+	            var title = $('<h1></h1>');
+	            var description = $('<p></p>');
+	            title.text(_data['name']);
+	            description.text(_data['description']);
+	            info.append(title);
+	            info.append(description);
+	            /* loading all thumbnails */
+	            for(var i=0; i<_data['exampleList'].length; i++){
+	                var thumb = $('<img></img>');
+	                thumb.addClass('example-thumb');
+	                /* thumbnail main attributes */
+	                thumb.attr('src',_data['exampleList'][i]['thumb']);
+	                thumb.attr('id','thumb_' + i);
+
+	                /* thumbnail data */
+	                thumb.data('large',_data['exampleList'][i]['large']);
+	                thumb.data('code',_data['exampleList'][i]['code']);
+
+	                /* thumbnail events */
+	                thumb.on('click',onThumbExampleClick);
+	                info.append(thumb);
+
+	                if(i==0){
+	                    /* load the first example */
+	                    loadExampleImage(thumb);
+	                }
+	            }
+	            // Added hidden textarea element to store code
+	            var hidden_code = $('<textarea></textarea>');
+	            hidden_code.appendTo('#example-info');
+	            hidden_code.attr('id','example-info-code');
+	            hidden_code.disabled=true;
+	            /* adding the get-code button */
+	            var getCodeButton = $('<img></img>');
+	            getCodeButton.attr('src','images/button_get_code.png');
+	            getCodeButton.attr('id','example-get-code');
+	            info.append(getCodeButton);
+	            var code = $('#example-image').data('code');
+	            $.get(String(code),function(data){              //Getting code from path
+	                hidden_code.html(String(data));
+	            });
+	            getCodeButton.on('click',copyExampleCode);
+	        }
+
+	        /* handles the click on a thumbnail */
+	        function onThumbExampleClick(event){
+	            loadExampleImage($(this));
+	        }
+
+	        /* loads the correspondent image from the thumbnail */
+	        function loadExampleImage(_thumb)
+	        {
+	            /* removing old image reference */
+	            $('#example-image-container').empty();
+	            $("img[id^=thumb_]").each(function(){
+	                $(this).removeClass('example-thumb-active');
+	            });
+
+	            /* loading selected image */
+	            var imageURL = $(_thumb).data('large');
+
+	            // SVG Loading happens here
+	            var image = $("<img></img");
+	            image.attr("src",imageURL);
+	            image.attr('id','example-image');
+	            image.data('code',$(_thumb).data('code'));
+
+	            /* adding the loaded image into the drag view */
+	            $("#example-image-container").append(image);
+
+	            /* marking the active thumb */
+	            $(_thumb).addClass('example-thumb-active');
+
+	            /* making the image draggable */
+	            image.draggable();
+
+	            /* removing existing copy feedback and restoring the copy button */
+	            if($('#example-info').has('#example-code-copied')){
+	                $('#example-code-copied').remove();
+	                $('#example-get-code').show();
+	            }
+	        }
+
+	        /* --------------------------------------------------------
+	         * COPY EXAMPLE CODE
+	         * Implement the algorithm to read the example
+	         * code here. The var code already stores url
+	         * when creating the Entry in the main loop
+	         * --------------------------------------------------------
+	         */
+	        function copyExampleCode(event){
+                var text = document.getElementById('example-info-code');
+                selectText(text);
+                if(!copyCode()){                   //Check if copyCode fails
+                    alert('Failed to copy code!');
+                } else {
+    	            $(this).fadeOut(100,showCopiedFeedback);
+                }
+            }
+
+	        function selectText(element){
+	            var range = document.createRange();// create new range object
+	            range.selectNodeContents(element);// set range to encompass desired element text
+	            var selection = window.getSelection(); // get Selection object
+	            selection.removeAllRanges(); // unselect any user selected text (if any)
+	            selection.addRange(range); // add range to Selection object to select it
+	        }
+
+            function copyCode(){
+                var copycheck; // var to check whether execCommand successfully executed
+	            try{
+                    copycheck = document.execCommand('copy'); // run command to copy selected text
+                } catch(e){
+                    copycheck = false;
+                }
+                return copycheck;
+             }
+
+	        function showCopiedFeedback(){
+	            var feedback = $('<img></img>');
+	            feedback.attr('src','images/button_code_copied.png');
+	            feedback.attr('id','example-code-copied');
+	            $('#example-info').append(feedback);
+	            feedback.hide();
+	            feedback.fadeIn(100);
+	        }
+
+	        /* clears all data and loaded images
+	         * closes the view and restore the main content */
+	        function close(){
+	            el.fadeOut(250,onCloseComplete);
+	        }
+
+	        function onCloseComplete(){
+	            /* clearing all created objects */
+	            $(window).off('resize',onWindowResize);
+	            $("img[id^=thumb_]").each(function(){
+	                $(this).remove();
+	            });
+
+	            $('#example-image-container').empty();
+	            $('#example-get-code').remove();
+	            $('#example h1, p').remove();
+	            $('#example-code-copied').remove();
+	            $('#example-info-code').remove();
+	            $('#example').hide();
+	            el.trigger('examples:closed');
+	        }
+
+	        ExamplesView.prototype.show = function(_data){
+	            /* showing the example view */
+	            $("#example").fadeIn();
+
+	            adjustExampleView();
+	            loadExampleContents(_data);
+	            $(window).on('resize',onWindowResize);
+	        }
+	    }
+
+	    window.ExamplesView = ExamplesView;
+
+	}(window));
+
+	</script>
 
     <!-- page scripts !-->
     <script type="text/javascript">
@@ -133,7 +343,6 @@
             }
         });
     </script>
-
 </head>
 <body>
 
