datatypes: add memdesc.
Memory Description goal is to offer introspection on how to access
memory, useful as a common interface to expose objects in different
languages (JS, Python) and also how to serialize/load it (JSON, text).

Signed-off-by: Gustavo Sverzut Barbieri <gustavo.barbieri@intel.com>

--- a/src/lib/common/sol-common-buildopts.h.in
+++ b/src/lib/common/sol-common-buildopts.h.in
@@ -33,6 +33,10 @@ st.on_value("NO_API_VERSION_NEEDED", "y", "#define SOL_NO_API_VERSION 1", "")
 }}
 
 {{
+st.on_value("MEMDESC_DESCRIPTION", "y", "#define SOL_MEMDESC_DESCRIPTION 1", "")
+}}
+
+{{
 st.on_value("MODULES", "y", "#define SOL_DYNAMIC_MODULES 1", "")
 }}
 
