--- a/src/lib/datatypes/Makefile
+++ b/src/lib/datatypes/Makefile
@@ -3,6 +3,7 @@ obj-y += datatypes.mod
 obj-datatypes-y := \
     sol-arena.o \
     sol-buffer.o \
+    sol-memdesc.o \
     sol-str-slice.o \
     sol-str-table.o\
     sol-vector.o
@@ -13,4 +14,5 @@ headers-y := \
     include/sol-str-table.h \
     include/sol-buffer.h \
     include/sol-str-slice.h \
+    include/sol-memdesc.h \
     include/sol-vector.h
