samples:http: HTTPS sample
Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/src/samples/http/Kconfig
+++ b/src/samples/http/Kconfig
@@ -26,3 +26,8 @@ config SERVER_SSE_SAMPLE
 	bool "Server sent events sample"
 	depends on HTTP_SAMPLES && HTTP_SERVER
 	default y
+
+config SERVER_HTTPS_SAMPLE
+	bool "HTTPS server sample"
+	depends on HTTP_SAMPLES && HTTP_SERVER
+	default y
