--- a/src/samples/http/Makefile
+++ b/src/samples/http/Makefile
@@ -12,3 +12,6 @@ sample-server-$(SERVER_SAMPLE) := server.c
 
 sample-$(SERVER_SSE_SAMPLE) += server-sse
 sample-server-sse-$(SERVER_SSE_SAMPLE) := server-sse.c
+
+sample-$(SERVER_HTTPS_SAMPLE) += server-https
+sample-server-https-$(SERVER_HTTPS_SAMPLE) := server-https.c
