--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -15,6 +15,18 @@ config RESOLVER_CONFFILE
 	bool "Resolver conffile"
 	depends on NODE_DESCRIPTION && FEATURE_FILESYSTEM
 	default y
+	help
+            For the sol-fbp-runner tool, have the ability to parse
+            configuration files declaring node types. This is a way to
+            parametrize flows for different platforms/situations and
+            still keep a single flow logic. If you know you won't be
+            using this feature on the runner tool and want to save
+            some space, say N.
+
+            NB.: The sol-fbp-generator tool will always be able to
+            resolve from configuration files.
+
+            If unsure, say Y.
 
 config INSPECTOR
 	bool "Inspector"
