samples:http:composed: Remove from blacklist
Signed-off-by: Flavio Ceolin <flavio.ceolin@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -210,6 +210,7 @@ source "src/samples/flow/gtk-gallery/Kconfig"
 source "src/samples/flow/http-client/Kconfig"
 source "src/samples/flow/http-json/Kconfig"
 source "src/samples/flow/http-server/Kconfig"
+source "src/samples/flow/http-composed/Kconfig"
 source "src/samples/flow/led-strip/Kconfig"
 source "src/samples/flow/minnow-calamari/Kconfig"
 source "src/samples/flow/misc/Kconfig"
