.gitignore: Add files moved to repo root as part of npm install
Closes gh-1926

Signed-off-by: Gabriel Schulhof <gabriel.schulhof@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ config.log*
 /node_modules/
 /bindings/nodejs/generated/main.cc
 /bindings/nodejs/generated/main.h
+aio.js
+bindings/nodejs/generated/header-files-list
+bindings/nodejs/generated/nodejs-bindings-sources.gyp
+gpio.js
+pwm.js
+spi.js
+uart.js
