cheat-sheet (html): support aliases now.
The latex one was not touched (it seems to be rotten anyway).

Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/data/scripts/sol-flow-node-type-gen.py.in
+++ b/data/scripts/sol-flow-node-type-gen.py.in
@@ -1110,6 +1110,11 @@ def generate_description_entry(descriptions, data):
                              "author",
                              "license",
                              "version"))
+    if "aliases" in data:
+        aliases = []
+        entry["aliases"] = aliases
+        for alias in data["aliases"]:
+            aliases.append(alias)
 
     if "options" in data:
         options = {"required": False}
