ipm: Add Inter-Processor Messaging (mailbox) to Soletta
Currently based on Zephyr IPM - and dependent on it. This new API shall
provide means to Soletta applications running on different cores to
communicate with each other.

Signed-off-by: Ederson de Souza <ederson.desouza@intel.com>

--- a/src/lib/io/Kconfig
+++ b/src/lib/io/Kconfig
@@ -81,3 +81,12 @@ config USE_MEMMAP
         Users must provide a mapping - for instance, using a JSON
         file - that will be used to define where on memory
         entries will be saved. Examples of memory are NVRAM or EEPROM.
+
+config USE_IPM
+    bool "Inter-processor messaging"
+    depends on ZEPHYR
+    default y
+    help
+        Provide API to Inter-processor messaging. Some platforms
+        have more than one processor - this API provides communication
+        among them.
