oic: Rename sol-oic-common.h to sol-oic.h
Use same naming approuch used in sol-http headers.

Signed-off-by: Otavio Pontes <otavio.pontes@intel.com>

--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -151,7 +151,7 @@ headers-$(BLUETOOTH) += \
     include/sol-gatt.h
 
 headers-$(OIC) += \
-    include/sol-oic-common.h \
+    include/sol-oic.h \
     include/sol-oic-client.h \
     include/sol-oic-server.h
 
