--- a/src/lib/comms/Makefile
+++ b/src/lib/comms/Makefile
@@ -133,7 +133,7 @@ headers-$(COAP) += \
     include/sol-coap.h
 
 headers-$(OIC) += \
-    include/sol-oic-common.h \
+    include/sol-oic.h \
     include/sol-oic-client.h \
     include/sol-oic-server.h
 
