modules/hc-sr04: add ultrasonic sensor
It's a module that emits ultrasonic waves to measure distance
to obstacles.

Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -64,6 +64,7 @@ source "src/modules/flow/gpio/Kconfig"
 source "src/modules/flow/grove/Kconfig"
 source "src/modules/flow/gtk/Kconfig"
 source "src/modules/flow/gyroscope/Kconfig"
+source "src/modules/flow/hc-sr04/Kconfig"
 source "src/modules/flow/http-client/Kconfig"
 source "src/modules/flow/http-server/Kconfig"
 source "src/modules/flow/iio/Kconfig"
