flow: Add IPM node types
So one can use Soletta Flow to communicate different cores.

Signed-off-by: Ederson de Souza <ederson.desouza@intel.com>

--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -70,6 +70,7 @@ source "src/modules/flow/http-server/Kconfig"
 source "src/modules/flow/iio/Kconfig"
 source "src/modules/flow/int/Kconfig"
 source "src/modules/flow/jhd1313m1/Kconfig"
+source "src/modules/flow/ipm/Kconfig"
 source "src/modules/flow/json/Kconfig"
 source "src/modules/flow/keyboard/Kconfig"
 source "src/modules/flow/led-7seg/Kconfig"
