build: add missing ldflag
obj-libshared-y-extra-ldflags was missing -lm

./build/stage/lib/common/sol-types.o: In function `sol_drange_mod':
sol-types.c:(.text.sol_drange_mod+0x48): undefined reference to `fmod'
./build/stage/shared/sol-util.o: In function `sol_util_double_equal':
sol-util.c:(.text.sol_util_double_equal+0x8d): undefined reference to `fmin'
collect2: error: ld returned 1 exit status

Signed-off-by: Ederson de Souza <ederson.desouza@intel.com>

--- a/src/shared/Makefile
+++ b/src/shared/Makefile
@@ -36,6 +36,8 @@ obj-libshared-$(PLATFORM_ZEPHYR) += \
 
 obj-libshared-y-extra-cflags += -fvisibility=default
 
+obj-libshared-y-extra-ldflags += -lm
+
 headers-y += \
     include/sol-util.h
 
