build: Use USE_ instead of _SUPPORT on configuration
We're following a convention:
 * FEATURE_X if X may be enabled or not per OS
 * USE_X if X may be enabled or not per configuration
 * HAVE_X if X may be enabled or not per dependency resolver

FLOW_SUPPORT wasn't following it.
So use USE_FLOW instead.

Signed-off-by: Bruno Dilly <bruno.dilly@intel.com>

--- a/Kconfig
+++ b/Kconfig
@@ -191,7 +191,7 @@ source "src/samples/bluetooth/Kconfig"
 
 config FLOW_SAMPLES
 	bool "Flow samples"
-	depends on FLOW_SUPPORT
+	depends on USE_FLOW
 	default y
 
 config FLOW_FBP_GENERATOR_SAMPLES
