--- a/src/lib/flow/Kconfig
+++ b/src/lib/flow/Kconfig
@@ -1,10 +1,10 @@
-config FLOW_SUPPORT
+config USE_FLOW
 	bool "Flow support"
 	default y
 
 config NODE_DESCRIPTION
 	bool "Node description support"
-	depends on FLOW_SUPPORT && FEATURE_RUNNABLE_PROGRAMS
+	depends on USE_FLOW && FEATURE_RUNNABLE_PROGRAMS
 	default y
 	help
             Add node description support to enable runtime introspection.
@@ -30,7 +30,7 @@ config RESOLVER_CONFFILE
 
 config INSPECTOR
 	bool "Inspector"
-	depends on FLOW_SUPPORT && FEATURE_RUNNABLE_PROGRAMS
+	depends on USE_FLOW && FEATURE_RUNNABLE_PROGRAMS
 	default y
 
 menu "Metatypes"
@@ -40,7 +40,7 @@ source "src/modules/flow-metatype/http-composed-server/Kconfig"
 endmenu
 
 menu "Node Types"
-	depends on FLOW_SUPPORT
+	depends on USE_FLOW
 source "src/modules/flow/accelerometer/Kconfig"
 source "src/modules/flow/aio/Kconfig"
 source "src/modules/flow/am2315/Kconfig"
