--- a/src/samples/flow/c-api/Kconfig
+++ b/src/samples/flow/c-api/Kconfig
@@ -1,6 +1,6 @@
 config FLOW_C_API_CUSTOM_NODE_TYPES_SAMPLE
 	bool
-	depends on FLOW_SUPPORT
+	depends on USE_FLOW
 	default y
 
 config FLOW_C_API_HIGHLEVEL_SAMPLE
@@ -10,7 +10,7 @@ config FLOW_C_API_HIGHLEVEL_SAMPLE
 
 config FLOW_C_API_LOWLEVEL_SAMPLE
 	bool
-	depends on FLOW_SUPPORT && FLOW_NODE_TYPE_CONSOLE
+	depends on USE_FLOW && FLOW_NODE_TYPE_CONSOLE
 	default y
 
 config FLOW_C_API_SIMPLECTYPE_SAMPLE
