node-names: finish normalizing names and aliases
Signed-off-by: Gustavo Lima Chaves <gustavo.lima.chaves@intel.com>

--- a/src/samples/flow/iio/sol-flow-intel-minnow-max-linux_gt_3_17.json
+++ b/src/samples/flow/iio/sol-flow-intel-minnow-max-linux_gt_3_17.json
@@ -31,7 +31,7 @@
            "iio_device": "tcs3472 create,i2c,platform/80860F41:05,0x29,tcs3472 0",
            "buffer_size": "20"
      },
-     "type": "iio/color"
+     "type": "iio/color-sensor"
   },
   {
      "name": "MyHumidity",
