file: Export file-reader header
Add file-reader header to Soletta API.

Signed-off-by: Otavio Pontes <otavio.pontes@intel.com>

--- a/src/shared/Makefile
+++ b/src/shared/Makefile
@@ -42,4 +42,5 @@ headers-y += \
     include/sol-util.h
 
 headers-$(FEATURE_FILESYSTEM) += \
-    include/sol-util-file.h
+    include/sol-util-file.h \
+    include/sol-file-reader.h
