build: Take the board name from the environment
Like PREFIX and {C,LD}FLAGS, allow the environment or command line to
provide the board name to use, which allows us to take it from the OS
build system when building for small OSes, without requiring the user
to do any manual configurations.

Signed-off-by: Iván Briano <ivan.briano@intel.com>

--- a/Makefile.smallos
+++ b/Makefile.smallos
@@ -52,6 +52,7 @@ soletta_config := $(thisdir)/.config
 # touching the OS build system
 $(soletta_target) $(soletta_config): private override MAKEFLAGS=""
 $(soletta_target) $(soletta_config): private export PYTHON=python3
+$(soletta_target) $(soletta_config): private export BOARD_NAME:=$(BOARD_NAME)
 
 $(soletta_target): $(soletta_config)
 	@echo "Building Soletta..."
