--- a/src/test-cpp/headers.cc.in
+++ b/src/test-cpp/headers.cc.in
@@ -210,7 +210,7 @@ startup()
     SOL_MEMMAP_ENTRY(memamp2, 0, 0);
 
 #ifdef COAP
-    MAKE_RSPCODE(2, 3);
+    sol_coap_make_response_code(2, 3);
 #endif
 
 #ifdef FLOW_NODE_TYPE_FLOWER_POWER
