Export SOL_FEATURE_FILESYSTEM to be used in public headers
Some public headers as sol-http-server.h needs SOL_FEATURE_FILESYSTEM
definition.

Signed-off-by: Otavio Pontes <otavio.pontes@intel.com>

--- a/src/lib/common/sol-common-buildopts.h.in
+++ b/src/lib/common/sol-common-buildopts.h.in
@@ -23,6 +23,7 @@ st.on_value("PLATFORM_LINUX", "y", "#define SOL_PLATFORM_LINUX 1", "")
 st.on_value("PLATFORM_RIOTOS", "y", "#define SOL_PLATFORM_RIOT 1", "")
 st.on_value("PLATFORM_CONTIKI", "y", "#define SOL_PLATFORM_CONTIKI 1", "")
 st.on_value("PLATFORM_ZEPHYR", "y", "#define SOL_PLATFORM_ZEPHYR 1", "")
+st.on_value("FEATURE_FILESYSTEM", "y", "#define SOL_FEATURE_FILESYSTEM 1", "")
 }}
 
 {{
